# autoresearch-waste

./: .gitignore  MODAL_GUIDE.md  README.md  local_manager.py  modal_app.py  prepare.py  program.md  pyproject.toml  train.py
