[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoresearch-waste"
version = "0.1.0"
description = "Autoresearch for waste classification in Nigeria"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "datasets>=2.14.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]

[tool.uv]
dev-dependencies = []